# storytelling-media-mcp

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: client-config.md
plugins/storytelling-media-mcp/: .claude-mcp.json  .mcp.json
plugins/storytelling-media-mcp/.claude-plugin/: plugin.json
plugins/storytelling-media-mcp/.codex-plugin/: plugin.json
plugins/storytelling-media-mcp/scripts/: run-server.sh
plugins/storytelling-media-mcp/skills/movie-production-pipeline/: SKILL.md
plugins/storytelling-media-mcp/skills/movie-production-pipeline/agents/: openai.yaml
plugins/storytelling-media-mcp/skills/movie-production-pipeline/references/: screenplay-discipline.md  stage-contracts.md
plugins/storytelling-media-mcp/skills/storytelling-media/: SKILL.md
scripts/: check_adc.py
storytelling_mcp/: __init__.py  __main__.py  google_media.py  server.py  stitching.py
tests/: test_google_media.py  test_stitching.py
