[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "storytelling-media-mcp"
version = "0.2.3"
description = "MCP tools for Nano Banana image generation, Veo video generation, and FFmpeg stitching."
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
authors = [
  { name = "imyousuf" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "google-genai==2.8.0",
  "google-auth==2.53.0",
  "mcp==1.27.2",
  "pillow==12.2.0",
  "python-dotenv==1.2.2",
  "requests==2.34.2"
]

[project.scripts]
storytelling-media-mcp = "storytelling_mcp.server:main"

[tool.setuptools.packages.find]
include = ["storytelling_mcp*"]
